# easydict_win32

./: .gitignore  .gitmodules  .simplify_diff.patch  0701-top50.md  AGENTS.md  CLAUDE.md  CONTINUATION_CONTEXT.md  Directory.Build.props  LICENSE  PRIVACY.md  PR_FIXES_SUMMARY.md  README.md  README_ZH.md  align-history.md  bindings.rs  compare_winui_plan.md  config.toml  experience.md  migration-list.md  pri-dump.xml  refactor-progress.md  refactor-winfluent-rs.md  source-test-ratio.json  store.md
.agent/: AGENTS.md
.claude/: CLAUDE.md  LONG_DOCUMENT_TRANSLATION.md  settings.local.json
.winstore/: README.md  store-config.json
browser-extension/: README.md  background.js  manifest.json  manifest.v2.json  setup.html  setup.js
content/: _index.md  privacy.md  zh.md
doc/: pdf-translation-refactoring.md
docs/: architecture.md  cross-pollination-analysis.md  diff-with-pdfmathtranslate.md  longdoc_alignment_status.md  numeric-formula-placeholders-implementation.md  ocr-implementation-plan.md
dotnet/: .gitignore  Directory.Build.targets  Easydict.Win32.sln  MDX_INDEX_LIBRARY.md  Makefile  README.md  memory-profiling.md  winapp.yaml
lib/easydict-foundry-local/: Cargo.toml
lib/easydict-foundry-local/src/: lib.rs
lib/easydict-nllb/: Cargo.toml
lib/easydict-nllb/src/: lib.rs
lib/easydict-windows-ai/: Cargo.toml  build.rs
lib/easydict-windows-ai/src/: lib.rs  winrt_language_model.rs
lib/easydict-windows-text-selection/: Cargo.toml
lib/easydict-windows-text-selection/src/: lib.rs
lib/easydict-windows-tts/: Cargo.toml
lib/easydict-windows-tts/src/: lib.rs
lib/winfluent-rs/crates/win_fluent_backend_iced/: Cargo.toml
lib/winfluent-rs/crates/win_fluent_backend_iced/src/: lib.rs
lib/winfluent-rs/crates/win_fluent_backend_iced/tests/: compile_contract.rs
lib/winfluent-rs/crates/win_fluent_gallery/: Cargo.toml
lib/winfluent-rs/crates/win_fluent_gallery/src/: main.rs
lib/winfluent-rs/crates/win_fluent_platform_win/: Cargo.toml
lib/winfluent-rs/crates/win_fluent_platform_win/src/: lib.rs
lib/winfluent-rs/crates/win_fluent_platform_win/tests/: tray_contract.rs  uia_contract.rs
rs/: Cargo.toml  README.md
rs/.cargo/: config.toml
rs/crates/easydict_app/: Cargo.toml
rs/crates/easydict_app/locales/: ar-SA.po  da-DK.po  de-DE.po  en-US.po  fr-FR.po  hi-IN.po  id-ID.po  it-IT.po  ja-JP.po  ko-KR.po  ms-MY.po  th-TH.po  vi-VN.po  zh-CN.po  zh-TW.po
rs/crates/easydict_app/src/: activation.rs  app_data.rs  browser_registrar.rs  character_paragraph.rs  cli_translate.rs  clipboard.rs  compat_client.rs  compat_protocol.rs  content_preservation.rs  credential_protection.rs  custom_streaming.rs  debug_log.rs  desktop_integration.rs  desktop_shell.rs  doc_layout_yolo.rs  doc_layout_yolo_onnx.rs  document_layout.rs  file_dialog.rs  font_download.rs  font_metrics.rs  formula_protection.rs  formula_text_reconstruction.rs  grammar_correction.rs  i18n.rs  latex_formula.rs  layout_model_download.rs  lex_index.rs  lib.rs  llm_streaming.rs  local_dictionary.rs  local_dictionary_index.rs  long_document.rs  long_document_cli.rs  long_document_context.rs  long_document_export.rs  main.rs  mdx_native.rs  mouse_selection.rs  named_event.rs  native_bridge.rs  (+34 more)
rs/crates/easydict_app/tests/: browser_registrar_behavior.rs  character_paragraph_behavior.rs  cli_translate_behavior.rs  compat_client.rs  compat_protocol.rs  content_preservation_behavior.rs  credential_protection_behavior.rs  custom_streaming_behavior.rs  default_api_boundary_behavior.rs  doc_layout_yolo_behavior.rs  doc_layout_yolo_onnx_behavior.rs  document_layout_behavior.rs  font_metrics_behavior.rs  formula_protection_behavior.rs  formula_text_reconstruction_behavior.rs  grammar_correction_behavior.rs  latex_formula_behavior.rs  layout_model_download_behavior.rs  lex_index_behavior.rs  llm_streaming_behavior.rs  local_dictionary_index_behavior.rs  long_document_behavior.rs  long_document_cli_behavior.rs  long_document_context_behavior.rs  long_document_export_behavior.rs  mdx_native_behavior.rs  mouse_selection_behavior.rs  native_bridge_behavior.rs  ocr_behavior.rs  openai_compatible_behavior.rs  openvino_download_behavior.rs  pdf_content_stream_behavior.rs  pdf_export_blocks_behavior.rs  pdf_formula_adapter_behavior.rs  pdf_native_export_behavior.rs  pdf_source_extraction_behavior.rs  protocol_behavior.rs  quick_translate_behavior.rs  repro_local_ai_expand_overflow.rs  resource_download_behavior.rs  (+14 more)
rs/crates/easydict_encrypt_secret/: Cargo.toml
rs/crates/easydict_encrypt_secret/src/: lib.rs  main.rs
rs/crates/easydict_encrypt_secret/tests/: cli_behavior.rs
rs/crates/easydict_icon_generator/: Cargo.toml
rs/crates/easydict_icon_generator/src/: lib.rs  main.rs
rs/crates/easydict_msix_validate/: Cargo.toml
rs/crates/easydict_msix_validate/src/: lib.rs  main.rs
rs/crates/easydict_packager/: Cargo.toml
rs/crates/easydict_packager/src/: lib.rs  main.rs
rs/crates/easydict_packager/tests/: msix_runtime_profile_contract_behavior.rs  release_contract_behavior.rs
rs/crates/easydict_pdf_to_images/: Cargo.toml
rs/crates/easydict_pdf_to_images/src/: main.rs
rs/crates/easydict_pdf_to_images/tests/: cli_behavior.rs  pdf_render_contract.rs
rs/crates/easydict_preview_iced/: Cargo.toml  build.rs
rs/crates/easydict_preview_iced/src/: control.rs  main.rs
rs/crates/easydict_store_listings/: Cargo.toml
rs/crates/easydict_store_listings/src/: lib.rs  main.rs
rs/crates/easydict_ui_parity_analyzer/: Cargo.toml
rs/crates/easydict_ui_parity_analyzer/src/: lib.rs  main.rs
rs/crates/easydict_windows_ocr/: Cargo.toml
rs/crates/easydict_windows_ocr/src/: lib.rs
rs/scripts/: Capture-PreviewParityMatrix.ps1  Capture-PreviewScreenshot.ps1  Capture-SettingsServicesExpandedParity.ps1  Compare-DotnetRustUiCode.ps1  Invoke-MdxRealCorpusValidation.ps1  Invoke-RsCoreSliceValidation.ps1  Measure-SettingsServicesExpanderColors.ps1  Package-Portable.ps1  Repro-ClickExpander.ps1  Repro-LiveTranslate.ps1  Repro-LocalAiInfoBars.ps1  Repro-ThemeFlashCapture.ps1  Test-RsCoreSliceValidation.ps1
sass/: style.scss
(+898 files in other folders)
