[workspace]
resolver = "2"
members = [
    "crates/easydict_app",
    "crates/easydict_encrypt_secret",
    "crates/easydict_msix_validate",
    "crates/easydict_pdf_to_images",
    "crates/easydict_preview_iced",
    "crates/easydict_ui_parity_analyzer",
    "crates/easydict_icon_generator",
    "crates/easydict_packager",
    "crates/easydict_store_listings",
    "crates/easydict_windows_ocr",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
version = "0.1.0"
