[package]
name = "easydict_windows_tts"
edition = "2021"
license = "GPL-3.0-or-later"
version = "0.1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Media_Speech",
    "Win32_System_Com",
    "Win32_System_Threading",
] }
