[package]
name = "easydict_app"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
clap = { version = "4.5", features = ["derive"] }
futures-channel = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
md5 = { package = "md-5", version = "0.10" }
lopdf = "0.38"
pdf-extract = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1"
ring = "0.17"
ripemd = "0.2"
rs-mdict = { path = "../../../lib/rs-mdict" }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text-splitter = { version = "0.29", features = ["markdown"] }
ttf-parser = "0.25"
unicode-normalization = "0.1"
unicode-segmentation = "1"
easydict_pdf_render = { path = "../../../lib/easydict-pdf-render" }
easydict_pdf_overlay = { path = "../../../lib/easydict-pdf-overlay" }
easydict_windows_ocr = { path = "../easydict_windows_ocr" }
win_fluent = { path = "../../../lib/winfluent-rs/crates/win_fluent" }
win_fluent_platform_win = { path = "../../../lib/winfluent-rs/crates/win_fluent_platform_win" }
zip = "8.6"

[features]
default = []
enable-linguee-service = []

[dev-dependencies]
win_fluent_testkit = { path = "../../../lib/winfluent-rs/crates/win_fluent_testkit" }

[[bin]]
name = "easydict-native-bridge"
path = "src/bin/easydict_native_bridge.rs"

[[bin]]
name = "easydict-lex-index"
path = "src/bin/easydict_lex_index.rs"

[[bin]]
name = "easydict_long_doc"
path = "src/bin/easydict_long_doc.rs"
