[package]
name = "easydict_app"
edition.workspace = true
license.workspace = true
version.workspace = true
autobins = false

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
clap = { version = "4.5", features = ["derive"] }
futures-channel = "0.3"
futures-core = "0.3"
html2text = "0.17"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
md5 = { package = "md-5", version = "0.10" }
lopdf = "0.38"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["api-21", "load-dynamic", "ndarray", "std"] }
pdf-extract = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1"
ring = "0.17"
ripemd = "0.2"
rs-mdict = { path = "../../../lib/rs-mdict" }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text-splitter = { version = "0.29", features = ["markdown"] }
ttf-parser = "0.25"
unicode-normalization = "0.1"
unicode-segmentation = "1"
easydict_pdf_render = { path = "../../../lib/easydict-pdf-render" }
easydict_pdf_overlay = { path = "../../../lib/easydict-pdf-overlay" }
easydict_nllb = { path = "../../../lib/easydict-nllb", features = ["ort-openvino"] }
easydict_foundry_local = { path = "../../../lib/easydict-foundry-local" }
easydict_runtime_guards = { path = "../../../lib/easydict-runtime-guards" }
easydict_windows_credentials = { path = "../../../lib/easydict-windows-credentials" }
easydict_windows_dialogs = { path = "../../../lib/easydict-windows-dialogs" }
easydict_windows_ipc = { path = "../../../lib/easydict-windows-ipc" }
easydict_windows_registry = { path = "../../../lib/easydict-windows-registry" }
easydict_windows_screen_capture = { path = "../../../lib/easydict-windows-screen-capture" }
easydict_windows_shell = { path = "../../../lib/easydict-windows-shell" }
easydict_windows_text_selection = { path = "../../../lib/easydict-windows-text-selection" }
easydict_windows_tts = { path = "../../../lib/easydict-windows-tts" }
easydict_windows_ai = { path = "../../../lib/easydict-windows-ai" }
easydict_windows_ocr = { path = "../easydict_windows_ocr" }
win_fluent = { path = "../../../lib/winfluent-rs/crates/win_fluent" }
win_fluent_platform_win = { path = "../../../lib/winfluent-rs/crates/win_fluent_platform_win" }
zip = "8.6"

[features]
default = []
enable-linguee-service = []
parity-diagnostics = ["win_fluent/parity-diagnostics"]
foundry-sdk = ["easydict_foundry_local/sdk"]
foundry-sdk-winml = ["easydict_foundry_local/sdk-winml"]
retained-dotnet-workers = ["easydict_runtime_guards/retained-dotnet-workers"]

[dev-dependencies]
easydict_windows_ipc = { path = "../../../lib/easydict-windows-ipc", features = ["test-support"] }
flate2 = "1"
win_fluent_testkit = { path = "../../../lib/winfluent-rs/crates/win_fluent_testkit" }

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "easydict_app"
path = "src/main.rs"

[[bin]]
name = "easydict_browser_registrar"
path = "src/bin/easydict_browser_registrar.rs"

[[bin]]
name = "easydict_cli"
path = "src/bin/easydict_cli.rs"

[[bin]]
name = "easydict-native-bridge"
path = "src/bin/easydict_native_bridge.rs"

[[bin]]
name = "easydict-lex-index"
path = "src/bin/easydict_lex_index.rs"

[[bin]]
name = "easydict_long_doc"
path = "src/bin/easydict_long_doc.rs"

[[bin]]
name = "easydict-ipc-mock"
path = "src/bin/easydict_ipc_mock.rs"
required-features = ["retained-dotnet-workers"]
