[package]
name = "easydict_packager"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
easydict_runtime_guards = { path = "../../../lib/easydict-runtime-guards" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
serde_json = "1"
sha2 = "0.10"
tempfile = "3.14"
zip = "8.6"

[features]
default = []
hybrid-dotnet-runtime-packaging = ["dep:reqwest"]
