[package]
name = "easydict_preview_iced"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
parity-diagnostics = [
    "easydict_app/parity-diagnostics",
    "win_fluent/parity-diagnostics",
    "win_fluent_backend_iced/parity-diagnostics",
    "dep:serde",
    "dep:serde_json",
]

[dependencies]
easydict_app = { path = "../easydict_app" }
win_fluent = { path = "../../../lib/winfluent-rs/crates/win_fluent" }
win_fluent_backend_iced = { path = "../../../lib/winfluent-rs/crates/win_fluent_backend_iced", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
