[package]
name = "easydict_ui_parity_analyzer"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
