[package]
name = "win_fluent_backend_iced"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
legacy-powershell-dialogs = []
legacy-powershell-tts = ["win_fluent_platform_win/legacy-powershell-tts"]
parity-diagnostics = ["win_fluent/parity-diagnostics", "dep:serde", "dep:serde_json"]

[dependencies]
easydict_windows_shell = { path = "../../../easydict-windows-shell" }
iced = { version = "0.14.0", default-features = false, features = [
    "advanced",
    "canvas",
    "crisp",
    "image",
    "svg",
    "thread-pool",
    "tiny-skia",
    "wgpu",
] }
win_fluent = { path = "../win_fluent" }
win_fluent_platform_win = { path = "../win_fluent_platform_win", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }


[dev-dependencies]
win_fluent_testkit = { path = "../win_fluent_testkit" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "win_fluent_iced_demo"
path = "src/bin/demo_window.rs"

[[bin]]
name = "win_fluent_mini_demo"
path = "src/bin/mini_window.rs"

[[bin]]
name = "win_fluent_mini_daemon"
path = "src/bin/mini_daemon.rs"
