[package]
name = "win_fluent_platform_win"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
win_fluent = { path = "../win_fluent" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "win_fluent_hotkey_probe"
path = "src/bin/hotkey_probe.rs"
