[package]
name = "win_fluent_platform_win"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
legacy-powershell-tts = []

[dependencies]
win_fluent = { path = "../win_fluent" }

[target.'cfg(windows)'.dependencies]
# Ergonomic COM bindings, used only by the debug-only GPU memory self-report
# (DXGI QueryVideoMemoryInfo). Already in the workspace graph via wgpu/winit, so
# this adds no meaningful build cost; the code path is gated on debug_assertions.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "win_fluent_hotkey_probe"
path = "src/bin/hotkey_probe.rs"
